<!--
  ~ Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
  ~
  ~ WSO2 Inc. licenses this file to you under the Apache License,
  ~ Version 2.0 (the "License"); you may not use this file except
  ~ in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <groupId>io.ballerina</groupId>
        <artifactId>ballerina</artifactId>
        <version>0.970.0-beta5</version>
    </parent>

    <groupId>org.ballerinax.kubernetes</groupId>
    <version>0.970.2-SNAPSHOT</version>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>kubernetes-extension</artifactId>
    <packaging>jar</packaging>
    <name>Ballerina Kubernetes Extension</name>
    <url>http://ballerinalang.org</url>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.ballerinalang</groupId>
            <artifactId>ballerina-lang</artifactId>
            <version>${ballerina.lang.version}</version>
        </dependency>
        <dependency>
            <groupId>io.fabric8</groupId>
            <artifactId>kubernetes-client</artifactId>
            <version>${fabric8.kubernetes.client.version}</version>
        </dependency>
        <dependency>
            <groupId>io.fabric8</groupId>
            <artifactId>kubernetes-api</artifactId>
            <version>${fabric8.kubernetes.api.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.fabric8</groupId>
            <artifactId>docker-client</artifactId>
            <version>${docker.client.version}</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>wso2.releases</id>
            <name>WSO2 Releases Repository</name>
            <url>http://maven.wso2.org/nexus/content/repositories/releases/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
                <checksumPolicy>ignore</checksumPolicy>
            </releases>
        </repository>
        <repository>
            <id>wso2.snapshots</id>
            <name>WSO2 Snapshot Repository</name>
            <url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
        <repository>
            <id>wso2-nexus</id>
            <name>WSO2 internal Repository</name>
            <url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
                <checksumPolicy>ignore</checksumPolicy>
            </releases>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>wso2.releases</id>
            <name>WSO2 Releases Repository</name>
            <url>http://maven.wso2.org/nexus/content/repositories/releases/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
                <checksumPolicy>ignore</checksumPolicy>
            </releases>
        </pluginRepository>
        <pluginRepository>
            <id>wso2.snapshots</id>
            <name>WSO2 Snapshot Repository</name>
            <url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </pluginRepository>
        <pluginRepository>
            <id>wso2-nexus</id>
            <name>WSO2 internal Repository</name>
            <url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
                <checksumPolicy>ignore</checksumPolicy>
            </releases>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>nexus-releases</id>
            <name>WSO2 Nexus Release Repository</name>
            <url>http://maven.wso2.org/nexus/service/local/staging/deploy/maven2/</url>
        </repository>
        <snapshotRepository>
            <id>wso2.snapshots</id>
            <name>WSO2 Snapshot Repository</name>
            <url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <scm>
        <url>https://github.com/ballerinax/kubernetes.git</url>
        <developerConnection>scm:git:https://github.com/ballerinax/kubernetes.git</developerConnection>
        <connection>scm:git:https://github.com/ballerinax/kubernetes.git</connection>
        <tag>HEAD</tag>
    </scm>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>ballerina/**</exclude>
                </excludes>
            </resource>

            <!-- copy ballerina annotation sources to the jar -->
            <resource>
                <directory>${ballerina.source.directory}</directory>
                <targetPath>META-INF/</targetPath>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.19.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>**/*.java</include>
                            </includes>
                            <forkCount>3</forkCount>
                            <reuseForks>true</reuseForks>
                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                        </configuration>
                    </execution>
                    <execution>
                        <id>verify</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <!-- For ballerina annotation processing -->
            <plugin>
                <groupId>org.bsc.maven</groupId>
                <artifactId>maven-processor-plugin</artifactId>
                <version>${mvn.processor.plugin.version}</version>
                <configuration>
                    <processors>
                        <processor>org.ballerinalang.codegen.BallerinaAnnotationProcessor</processor>
                    </processors>
                    <options>
                        <nativeEntityProviderPackage>org.ballerinalang.net.generated.providers
                        </nativeEntityProviderPackage>
                        <nativeEntityProviderClass>StandardNativeElementProvider</nativeEntityProviderClass>
                    </options>
                </configuration>
                <executions>
                    <execution>
                        <id>process</id>
                        <goals>
                            <goal>process</goal>
                        </goals>
                        <phase>generate-sources</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>true</createDependencyReducedPom>
                            <minimizeJar>true</minimizeJar>
                            <artifactSet>
                                <includes>
                                    <include>io.fabric8:*</include>
                                    <include>commons-io:commons-io</include>
                                    <include>commons-codec:commons-codec</include>
                                    <include>javax.validation:validation-api</include>
                                    <include>com.squareup.okhttp3:okhttp</include>
                                    <include>com.squareup.okhttp3:logging-interceptor</include>
                                    <include>com.squareup.okio:okio</include>
                                    <include>org.apache.commons:commons-compress</include>
                                    <include>com.github.jnr:jnr-unixsocket</include>
                                    <include>com.github.jnr:jnr-ffi</include>
                                    <include>com.github.jnr:jffi</include>
                                    <include>com.github.jnr:jnr-constants</include>
                                    <include>com.github.jnr:jnr-enxio</include>
                                    <include>com.github.jnr:jnr-posix</include>
                                    <include>org.ow2.asm:asm</include>
                                    <include>com.fasterxml.jackson.core:jackson-databind</include>
                                    <include>com.fasterxml.jackson.core:jackson-core</include>
                                    <include>com.fasterxml.jackson.core:jackson-annotations</include>
                                </includes>
                                <excludes>
                                    <exclude>org.slf4j:slf4j-api</exclude>
                                    <exclude>org.slf4j:slf4j-jdk14</exclude>
                                    <exclude>com.fasterxml.jackson.dataformat:jackson-dataformat-yaml</exclude>
                                    <exclude>com.fasterxml.jackson.core:jackson-databind</exclude>
                                    <exclude>com.fasterxml.jackson.core:jackson-annotations</exclude>
                                    <exclude>com.fasterxml.jackson.core:jackson-core</exclude>
                                    <exclude>commons-lang:commons-lang</exclude>
                                    <exclude>org.yaml:snakeyaml</exclude>
                                    <exclude>org.ballerinalang:ballerina-lang</exclude>
                                    <exclude>org.ballerinalang:ballerina-launcher</exclude>
                                    <exclude>org.ballerinalang:ballerina-builtin</exclude>
                                    <exclude>org.ballerinalang:ballerina-core</exclude>
                                    <exclude>org.ballerinalang:ballerina-mime</exclude>
                                    <exclude>org.ballerinalang:ballerina-logging</exclude>
                                    <exclude>org.ballerinalang:ballerina-http</exclude>
                                    <exclude>junit:junit</exclude>
                                    <exclude>org.bsc.maven:maven-processor-plugin</exclude>
                                </excludes>
                            </artifactSet>
                            <filters>
                                <filter>
                                    <artifact>com.github.jnr:jffi</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>com.github.jnr:jnr-unixsocket</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>com.github.jnr:jnr-ffi</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>com.github.jnr:jnr-constants</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>com.github.jnr:jnr-enxio</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>com.github.jnr:jnr-posix</artifact>
                                    <includes>
                                        <include>**</include>
                                    </includes>
                                </filter>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


    <properties>
        <mvn.processor.plugin.version>2.2.4</mvn.processor.plugin.version>
        <ballerina.lang.version>0.970.1</ballerina.lang.version>
        <fabric8.kubernetes.client.version>3.1.10</fabric8.kubernetes.client.version>
        <fabric8.kubernetes.api.version>3.0.11</fabric8.kubernetes.api.version>
        <fabric8.kubernetes.api.version>3.0.8</fabric8.kubernetes.api.version>
        <docker.client.version>1.3.1</docker.client.version>
        <jackson.core.version>2.9.4</jackson.core.version>
        <junit.version>4.12</junit.version>
        <ballerina.source.directory>${project.build.directory}/../src/main/ballerina</ballerina.source.directory>
    </properties>
</project>
